--- a/DataStructures.Benchmarks/DataStructures.Benchmarks.csproj
+++ b/DataStructures.Benchmarks/DataStructures.Benchmarks.csproj
@@ -10,7 +10,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="xunit" Version="2.5.3"/>
@@ -22,8 +21,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Algorithms\Algorithms.csproj" />
       <ProjectReference Include="..\Benchmarking.Common\Benchmarking.Common.csproj" />
+      <ProjectReference Include="..\DataStructures\DataStructures.csproj" />
     </ItemGroup>
 
 </Project>
