--- a/DataStructures.Tests/DataStructures.Tests.csproj
+++ b/DataStructures.Tests/DataStructures.Tests.csproj
@@ -10,8 +10,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
+        <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="xunit" Version="2.5.3"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
@@ -22,8 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Algorithms\Algorithms.csproj" />
-      <ProjectReference Include="..\Benchmarking.Common\Benchmarking.Common.csproj" />
+      <ProjectReference Include="..\DataStructures\DataStructures.csproj" />
     </ItemGroup>
 
 </Project>
