feat: implements breadth first search algorithms

--- a/Algorithms.Tests/Algorithms.Tests.csproj
+++ b/Algorithms.Tests/Algorithms.Tests.csproj
@@ -19,6 +19,7 @@
     
     <ItemGroup>
         <ProjectReference Include="../Algorithms/Algorithms.csproj" />
+        <ProjectReference Include="..\DataStructures\DataStructures.csproj" />
     </ItemGroup>
 
     <ItemGroup>
