--- a/Benchmarking.Common/Benchmarking.Common.csproj
+++ b/Benchmarking.Common/Benchmarking.Common.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
+      <PackageReference Include="BenchmarkDotNet.Diagnostics.dotTrace" Version="0.13.12" />
       <PackageReference Include="xunit.abstractions" Version="2.0.3" />
       <PackageReference Include="xunit.extensibility.core" Version="2.5.3" />
     </ItemGroup>
